syntax = "proto3";

package NCloud.NFileStore.NProtoPrivate;

option go_package = "a.yandex-team.ru/cloud/filestore/private/api/protos";

////////////////////////////////////////////////////////////////////////////////
// Actiions

message TDrainNodeRequest
{
    bool KeepDown = 1;
}

message TDrainNodeResponse
{
}
